--- a/libcfnet/Makefile.am
+++ b/libcfnet/Makefile.am
@@ -26,6 +26,7 @@ noinst_LTLIBRARIES = libcfnet.la
 AM_CPPFLAGS = -I$(top_srcdir)/libntech/libutils \
 	-I$(top_srcdir)/libpromises \
 	$(PCRE_CPPFLAGS) \
+	$(SYSTEMD_SOCKET_CPPFLAGS) \
 	$(OPENSSL_CPPFLAGS)
 
 libcfnet_la_SOURCES = \
